# rust-http-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  snapcraft.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd-crates.yml  cd.yml  ci.yml  publish-crate.yml  publish.yml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: lib.rs  main.rs
crates/cli/src/app/: mod.rs
crates/cli/src/commands/: args.rs
crates/cli/src/commands/alias/: action.rs  mod.rs
crates/cli/src/commands/alias/storage/: mod.rs  show.rs  store.rs
crates/cli/src/commands/http/: mod.rs  output.rs
crates/cli/src/commands/http/render/: request.rs
crates/cli/src/core/: error.rs  flags.rs  mod.rs  workspace.rs
crates/cli/src/items/: mod.rs  number.rs  ser.rs
crates/cli/src/parser/: core.rs  headers.rs  mod.rs  normalizer.rs
crates/cli/src/request/: certificate.rs  headers.rs  mod.rs
crates/cli/src/request/body/: form.rs  json.rs
crates/cli/src/shell/: error.rs  form.rs  json.rs  mod.rs  os.rs
crates/cli/src/test/: mod.rs  os.rs
crates/cli/src/theme/: default.rs
crates/cli/tests/: certificate.rs  rh.rs
crates/test/: Cargo.toml  README.md
crates/test/src/: lib.rs
doc/: alias.md  authentication.md  configuration.md  contributing.md  examples.md  help-and-version.md  install.md  json.md  todo.md
src/: core.rs  macros.rs  main.rs  test.rs  util.rs
src/app/: busy.rs  error.rs  exit.rs  mod.rs  output.rs  usage.rs  version.rs
src/commands/: args.rs  debug.rs  mod.rs
src/commands/alias/: action.rs  error.rs  help.rs  mod.rs
src/commands/alias/storage/: iter.rs  load.rs
src/commands/http/: help.rs
src/commands/http/render/: header.rs  mod.rs  request.rs  response.rs
src/config/: iter.rs  mod.rs
src/core/: flags.rs  mod.rs  types.rs  workspace.rs
src/file/: mod.rs
src/items/: mod.rs  number.rs  value.rs
src/parser/: core.rs  error.rs  flags.rs  headers.rs  method.rs  mod.rs  normalizer.rs  tty.rs  url.rs
src/print/: core.rs  direction.rs  headers.rs  mod.rs  request.rs  response.rs
src/request/: header.rs  headers.rs  mod.rs
src/request/body/: form.rs  json.rs  mod.rs
src/shell/: error.rs  json.rs  mod.rs  os.rs
src/terminal/: README.md  core.rs  form.rs  json.rs  mod.rs  theme.rs
src/test/: alias.rs  mod.rs
src/theme/: default.rs  mod.rs  style.rs
tests/: macros.rs  rh.rs
